Bug 1082550 - Fix media decoding on Android. r=blassey, a=lsblakk